<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iconUser"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iconUser"
        app:layout_constraintStart_toEndOf="@id/iconUser"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgStory"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/iconShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconUser"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/iconLike"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_thumb_up_off_alt_24"
        app:layout_constraintTop_toBottomOf="@id/imgStory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/numLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_like"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconLike"
        app:layout_constraintStart_toEndOf="@id/iconLike"
        app:layout_constraintTop_toBottomOf="@id/imgStory" />

    <ImageView
        android:id="@+id/iconComment"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_comment_24"
        app:layout_constraintTop_toBottomOf="@id/imgStory"
        app:layout_constraintStart_toEndOf="@id/numLike" />

    <TextView
        android:id="@+id/numComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_comment"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconComment"
        app:layout_constraintStart_toEndOf="@id/iconComment"
        app:layout_constraintTop_toBottomOf="@id/imgStory" />

    <ImageView
        android:id="@+id/iconShare"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintTop_toBottomOf="@id/imgStory"
        app:layout_constraintStart_toEndOf="@id/numComment" />


</androidx.constraintlayout.widget.ConstraintLayout>